--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,46 @@
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% if page.section == "home" %}{{ site.title }}{% else %}{{ page.title | default: site.title }}{% endif %}</title>
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  {% if jekyll.environment == 'production' and site.analytics %}
-    {% include analytics.html %}
-  {% endif %}
-  <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- SEO -->
+    <title>{{ page.title_tag }}</title>
+    <meta name="description" content="{{ page.description_tag }}" />
+
+    <!-- ASSETS -->
+    <link rel="stylesheet" href="/dist/css/styles.css">
+    <script defer src="/dist/js/third-party.js"></script>
+    <script defer src="/dist/js/scripts.js"></script>
+    {% if jekyll.environment == 'production' and site.analytics %}
+        <!-- {% include analytics.html %} -->
+    {% endif %}
+    <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="{% if page.title_tag %}{{ page.title_tag }}{% else if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="{{ page.description_tag }}">
+
+    {% if page.meta_image %}
+        <meta property="og:image" content="{{ page.meta_image }}">
+    {% endif %}
+
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{% if page.title_tag %}{{ page.title_tag }}{% else if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta name="twitter:description" content="{{ page.description_tag }}">
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+    {% if page.meta_image %}
+        <meta name="twitter:image" content="{{ page.meta_image }}">
+    {% endif %}
+
+
+    <!-- FAVICONS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7ad354">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
 </head>
