--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,5 @@
----
-layout: compress
----
-
 <!DOCTYPE html>
-<html data-current="{{ page.section }}" lang="en">
+<html data-current="{{ page.section }}" lang="nl">
 
   {% include head.html %}
 
