--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- SEO -->
-    <title>{{ page.title_tag }}</title>
-    <meta name="description" content="{{ page.description_tag }}" />
+    <title>{{ page.title }}</title>
+    <meta name="description" content="{{ page.description }}" />
 
     <!-- ASSETS -->
     <link rel="stylesheet" href="/dist/css/styles.css">
