--- a/src/styles/abstracts/variables/_variables.sass
+++ b/src/styles/abstracts/variables/_variables.sass
@@ -8,7 +8,7 @@ $default-spacing: 40px
 $default-spacing-mobile: 20px
 
 // This controls the maximum width of the viewport
-$max-width: 1480px // minus 40px padding on the left and right side
+$max-width: 1100px // minus 40px padding on the left and right side
 
 // Font-weights
 $bold: 600
@@ -20,10 +20,14 @@ $dark-green: darken($green, 20%)
 
 // Semantic color variables
 $main-bg-color: #ffffff
-$main-text-color: #444444
+$main-text-color: #333
 $slightly-muted-text-color: #666666
 $inverted-text-color: #ffffff
-$brand-color: $green
 
-$hover-darker-percentage: 8%
-$animation-delay: 0.2s
+$red: #83773d
+$turqoise: #50acc4
+$orange: #9cba5f
+
+$h1-color: $red
+$h2-color: $turqoise
+$h3-color: $orange
