--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,11 +8,9 @@
 
     <!-- ASSETS -->
     <link rel="stylesheet" href="/dist/css/styles.css">
-    <script defer src="/dist/js/third-party.js"></script>
-    <script defer src="/dist/js/scripts.js"></script>
-    {% if jekyll.environment == 'production' and site.analytics %}
-        <!-- {% include analytics.html %} -->
-    {% endif %}
+    <!-- <script defer src="/dist/js/third-party.js"></script> -->
+    <!-- <script defer src="/dist/js/scripts.js"></script> -->
+
     <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     <!-- Open Graph data -->
