--- a/src/styles/abstracts/variables/_variables.sass
+++ b/src/styles/abstracts/variables/_variables.sass
@@ -27,6 +27,7 @@ $inverted-text-color: #ffffff
 $red: #83773d
 $turqoise: #50acc4
 $orange: #9cba5f
+$yellow: #e5b929
 
 $h1-color: $red
 $h2-color: $turqoise
