--- a/src/styles/sections/_s-content.sass
+++ b/src/styles/sections/_s-content.sass
@@ -34,6 +34,10 @@
         font-size: 18px
         line-height: 1.6
 
+    a
+        color: $main-text-color
+        text-decoration: underline
+
     em
         color: $turqoise
         position: relative
@@ -64,7 +68,7 @@
             color: black
             content: ''
             left: 20px
-            top: 12px
+            top: 10px
             position: absolute
             width: 8px
             height: 8px
