--- a/src/styles/sections/_s-content.sass
+++ b/src/styles/sections/_s-content.sass
@@ -8,6 +8,7 @@
     h3,
     h4
         margin-bottom: 30px
+        letter-spacing: -0.6px
 
     p,
     ul,
@@ -33,6 +34,7 @@
         color: $main-text-color
         font-size: 18px
         line-height: 1.6
+        letter-spacing: 0.5px
 
     a
         color: $main-text-color
