--- a/src/styles/components/_c-hero.sass
+++ b/src/styles/components/_c-hero.sass
@@ -1,7 +1,7 @@
 .c-hero
     height: 40vw
     background-size: cover
-    background-position: center top
+    background-position: center center
     background-repeat: no-repeat
 
     &__spacer
