--- a/src/styles/sections/_s-content.sass
+++ b/src/styles/sections/_s-content.sass
@@ -8,7 +8,9 @@
     h3,
     h4
         margin-bottom: 30px
-        letter-spacing: -0.6px
+        letter-spacing: -0.4px
+        line-height: 1.2
+        font-weight: 400
 
     p,
     ul,
@@ -32,9 +34,10 @@
     p,
     li
         color: $main-text-color
-        font-size: 18px
-        line-height: 1.6
-        letter-spacing: 0.5px
+        font-size: 21px
+        line-height: 1.5
+        // letter-spacing: 0.5px
+        letter-spacing: -0.3px
 
     a
         color: $main-text-color
