--- a/src/styles/components/_c-hero.sass
+++ b/src/styles/components/_c-hero.sass
@@ -1,5 +1,7 @@
 .c-hero
-    height: 40vw
+    // height: 40vw
+    height: 80vh
+    // max-height: 560px
     background-size: cover
     background-position: center center
     background-repeat: no-repeat
