--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
             </div>
 
             <div class="s-header__nav">
-                <button class="js-nav">{% include svg/nav.svg %}</button>
+                <button class="js-menu-hamburger">{% include svg/nav.svg %}</button>
             </div>
         </div>
     </div>
