--- a/src/styles/abstracts/variables/_variables.sass
+++ b/src/styles/abstracts/variables/_variables.sass
@@ -23,6 +23,7 @@ $main-bg-color: #ffffff
 $main-text-color: #666
 
 $red: #83773d
+$dark-red: #5e3a1a
 $turqoise: #50acc4
 $orange: #9cba5f
 $yellow: #e5b929
