--- a/src/styles/sections/_s-content.sass
+++ b/src/styles/sections/_s-content.sass
@@ -20,22 +20,24 @@
 
     h1
         color: $h1-color
-        font-size: 40px
+        font-size: 36px
+        font-family: Handlee
 
     h2
         color: $h2-color
-        font-size: 32px
+        font-size: 29px
 
     h3
         color: $h3-color
-        font-size: 24px
+        font-size: 22px
         font-weight: 400
 
     p,
     li
         color: $main-text-color
-        font-size: 21px
+        font-size: 18px
         line-height: 1.5
+        font-family: Selawik
         // letter-spacing: 0.5px
         letter-spacing: -0.3px
 
