--- a/src/styles/components/_c-hero.sass
+++ b/src/styles/components/_c-hero.sass
@@ -1,10 +1,23 @@
 .c-hero
     // height: 40vw
-    height: 80vh
+    height: 30vw
     // max-height: 560px
     background-size: cover
     background-position: center center
     background-repeat: no-repeat
+    position: relative
 
     &__spacer
         height: 90px
+
+    &__slogan
+        position: absolute
+        bottom: 40px
+        transform: translateX(-50%)
+        left: 50%
+        font-family: Handlee
+        background-color: rgba(#bcd0ad, 0.7)
+        color: $dark-red
+        padding: 20px 40px
+        font-size: 30px
+
