--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- SEO -->
-    <title>{{ page.title }}</title>
+    <title>{{ page.title-tag }}</title>
     <meta name="description" content="{{ page.description }}" />
 
     <!-- ASSETS -->
