Add blog option

--- a/src/styles/sections/_s-content.sass
+++ b/src/styles/sections/_s-content.sass
@@ -20,7 +20,7 @@
 
     h1
         color: $h1-color
-        font-size: 36px
+        font-size: 46px
         font-family: Handlee
 
     h2
@@ -45,11 +45,13 @@
         color: $main-text-color
         text-decoration: underline
 
+    // Quote
     em
         color: $turqoise
         position: relative
         padding: 30px
         display: block
+        margin-top: -30px
 
 
         &:before,
