--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,17 +8,12 @@
     {% include header.html %}
 
     <main>
-        {% if page.hero-image %}
-            <div class="c-hero" style="background-image: url({{ page.hero-image }})">
-                {% if page.hero-slogan %}
-                    <div class="c-hero__slogan">{{ page.hero-slogan }}</div>
-                {% endif %}
-            </div>
-        {% else %}
-            <div class="c-hero__spacer"></div>
-        {% endif %}
-
         <div class="l-wrapper">
+            <div class="s-blog">
+                <h1 class="s-blog__heading">{{ page.title }}</h1>
+                <p class="s-blog__date">{{ page.friendly-date }}</p>
+            </div>
+
             <div class="s-content">
                 {{ content }}
             </div>
