--- a/src/styles/abstracts/variables/_variables.sass
+++ b/src/styles/abstracts/variables/_variables.sass
@@ -18,9 +18,6 @@ $medium: 400
 $green: #7ad354
 $dark-green: darken($green, 20%)
 
-// Semantic color variables
-$main-bg-color: #ffffff
-$main-text-color: #666
 
 $red: #83773d
 $dark-red: #5e3a1a
@@ -31,3 +28,7 @@ $yellow: #e5b929
 $h1-color: $turqoise
 $h2-color: $red
 $h3-color: $orange
+
+// Semantic color variables
+$main-bg-color: #ffffff
+$main-text-color: $red
