--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
-<footer>
-
+<footer class="s-footer">
+	<div>
+		<a href="/">
+            <img src="{{ site.image_path }}/logo.png">
+        </a>		
+	</div>
 </footer>
