Add other blogs feature

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,8 @@
 
     <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
+    <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
+
     <!-- Open Graph data -->
     <meta property="og:title" content="{% if page.title_tag %}{{ page.title_tag }}{% else if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
