--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,8 @@
             </div>
         </div>
 
+        {% include other-blog-posts.html %}
+
     </main>
 
     <div class="s-menu js-menu">
