--- a/src/styles/sections/_s-other-pages.sass
+++ b/src/styles/sections/_s-other-pages.sass
@@ -1,3 +1,7 @@
 .s-other-pages
     padding: 50px 0
-    background-color: lighten($yellow, 30%)
+    background-color: rgb(183, 210, 170)
+
+    h2,
+    a
+    	color: $dark-red
