--- a/src/styles/sections/_s-content.sass
+++ b/src/styles/sections/_s-content.sass
@@ -37,7 +37,7 @@
         color: $main-text-color
         font-size: 18px
         line-height: 1.5
-        font-family: Selawik
+        font-family: Karla
         // letter-spacing: 0.5px
         letter-spacing: -0.3px
 
