--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 
     <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Handlee|Karla:400,700&display=swap" rel="stylesheet">
 
     <!-- Open Graph data -->
     <meta property="og:title" content="{% if page.title_tag %}{{ page.title_tag }}{% else if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
