--- a/src/styles/base/_reset.sass
+++ b/src/styles/base/_reset.sass
@@ -46,7 +46,7 @@ html,
 body,
 input,
 button
-  font-family: Selawik, Open Sans, Arial
+  font-family: Karla, Selawik, Open Sans, Arial
 
 a
   // outline: none
