--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include header.html %}
 
     <main>
-        {% if page.hero-image %}
+        {% if page.hero-image != '' %}
             <div class="c-hero" style="background-image: url({{ page.hero-image }})">
                 {% if page.hero-slogan %}
                     <div class="c-hero__slogan">{{ page.hero-slogan }}</div>
