--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,30 @@
 <footer class="s-footer">
-	<div>
-		<a href="/">
-            <img src="{{ site.image_path }}/logo.png">
-        </a>		
+	<div class="l-wrapper">
+		
+		<div class="s-footer__grid">
+			<div class="s-footer__logo">
+				<a href="/">
+		            <img src="{{ site.image_path }}/logo.png">
+		        </a>		
+				
+			</div>
+			<div class="u-text-center">
+				<b>Contact</b>
+				<p class="u-mb">Kiann Kindercoaching<br>
+					Annelies Hofstee<br>
+					Waterviolier 1<br>
+					9613 BH Meerstad
+				</p>
+				<p>
+					<a href="mailto:info@kiannkindercoaching.nl">info@kiannkindercoaching.nl</a><br>
+					06-13183955
+				</p>
+			</div>
+		</div>
+
+	</div>
+	<div class="s-footer__copyright">
+		&copy; 2019 Kiann Kindercoaching | 
+		<a href="/privacy-policy">Privacy policy</a>
 	</div>
 </footer>
