--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,40 +22,13 @@
             </div>
         </div>
 
-        <div class="s-other-pages">
-            <div class="l-wrapper">
-                <div class="s-content">
-                    <h2>Lees ook:</h2>
-                    <ul>
-                        {% for other-page in site.pages %}
-                            {% if other-page.include-in-other-pages-list == true %}
-                                {% if other-page.permalink != page.permalink %}
-                                    <li><a href="{{ other-page.permalink }}">{{ other-page.title }}</a></li>
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
+        {% include other-pages.html %}
 
         {% include other-blog-posts.html %}
 
     </main>
 
-    <div class="s-menu js-menu">
-        <button class="s-menu__close js-menu-close">
-            {% include svg/close.svg %}
-        </button>
-        <h2 class="s-menu__heading">Menu</h2>
-        {% for item in site.pages %}
-            {% if item.include-in-menu == true %}
-                <a class="s-menu__link" href="{{ item.permalink }}">{{ item.title }}</a>
-            {% endif %}
-        {% endfor %}
-    </div>
-
-    <div class="s-menu__backdrop js-menu-backdrop"></div>
+    {% include menu.html %}
 
     {% include footer.html %}
 
