--- a/src/styles/sections/_s-menu.sass
+++ b/src/styles/sections/_s-menu.sass
@@ -11,6 +11,7 @@
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05)
     transition: transform 0.3s ease-in-out
     transform: translateX(100%)
+    overflow-y: auto
 
     &.\--visible
         transform: translateX(0)
