--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,8 @@
             </div>
 
             <div class="s-header__nav">
+                <a class="s-header__nav-main-link" href="/blogs">Blogs</a>
+                <a class="s-header__nav-main-link" href="/contact">Contact</a>
                 <button class="js-menu-hamburger">{% include svg/nav.svg %}</button>
             </div>
         </div>
