--- a/src/styles/sections/_s-header.sass
+++ b/src/styles/sections/_s-header.sass
@@ -14,5 +14,17 @@
             height: 70px
 
     &__nav
+        &-main-link
+            font-size: 25px
+            margin-right: 30px
+            display: inline-block
+            color: $turqoise
+            font-weight: 700
+
+            +mobile
+                display: none
+
         svg
-            height: 30px
+            height: 20px
+
+    
