--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <main>
         {% if page.hero-image != '' %}
             <div class="c-hero" style="background-image: url({{ page.hero-image }})">
-                {% if page.hero-slogan %}
+                {% if page.hero-slogan != '' %}
                     <div class="c-hero__slogan">{{ page.hero-slogan }}</div>
                 {% endif %}
             </div>
