--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
         <div class="l-wrapper">
             <div class="s-content">
-                {{ content }}
+                {{ content | markdownify }}
             </div>
         </div>
 
