--- a/src/styles/sections/_s-content.sass
+++ b/src/styles/sections/_s-content.sass
@@ -22,10 +22,11 @@
         font-size: 42px
 
     h2
-        color: $h2-color
+        color: $main-text-color
         font-size: 29px
 
     h3
+        color: $main-text-color
         font-size: 22px
         font-weight: 400
 
