--- a/src/styles/sections/_s-footer.sass
+++ b/src/styles/sections/_s-footer.sass
@@ -1,5 +1,5 @@
 .s-footer
-	color: $dark-red
+	color: $red
 
 	a 
 		color: $red
@@ -22,5 +22,4 @@
 		text-align: center
 		font-size: 14px
 		padding: 20px 0
-		color: #666
 		border-top: 1px solid rgba(black, 0.1)
