--- a/src/styles/components/_c-hero.sass
+++ b/src/styles/components/_c-hero.sass
@@ -1,11 +1,14 @@
 .c-hero
-    // height: 40vw
-    height: 30vw
-    // max-height: 560px
     background-size: cover
     background-position: center center
     background-repeat: no-repeat
     position: relative
+
+    +mobile
+        height: 50vh
+
+    +tablet-desktop
+        height: 30vw
 
     &__slogan
         position: absolute
@@ -18,3 +21,7 @@
         padding: 20px 40px
         font-size: 30px
 
+        +mobile
+            width: 100%
+            font-size: 25px
+            text-align: center
