--- a/src/styles/components/_c-hero.sass
+++ b/src/styles/components/_c-hero.sass
@@ -8,20 +8,23 @@
         height: 50vh
 
     +tablet-desktop
-        height: 30vw
+        height: 400px
 
     &__slogan
         position: absolute
-        bottom: 40px
+        bottom: 0
         transform: translateX(-50%)
         left: 50%
         font-family: Handlee
         background-color: rgba(#bcd0ad, 0.7)
         color: $dark-red
-        padding: 20px 40px
         font-size: 30px
+        text-align: center
+        width: 100%
 
         +mobile
-            width: 100%
             font-size: 25px
-            text-align: center
+            padding: 10px 20px
+    
+        +tablet-desktop
+            padding: 20px 40px
