Add Groningen to address for SEO

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,19 @@
 <footer class="s-footer">
 	<div class="l-wrapper">
-		
+
 		<div class="s-footer__grid">
 			<div class="s-footer__logo">
 				<a href="/">
 		            <img src="{{ site.image_path }}/logo.png">
-		        </a>		
-				
+		        </a>
+
 			</div>
 			<div class="u-text-center">
 				<b>Contact</b>
 				<p class="u-mb">Kiann Kindercoaching<br>
 					Annelies Hofstee<br>
 					Waterviolier 1<br>
-					9613 BH Meerstad
+					9613 BH Meerstad (bij Groningen)
 				</p>
 				<p>
 					<a href="mailto:info@kiannkindercoaching.nl">info@kiannkindercoaching.nl</a><br>
@@ -24,7 +24,7 @@
 
 	</div>
 	<div class="s-footer__copyright">
-		&copy; 2019 Kiann Kindercoaching | 
+		&copy; 2019 Kiann Kindercoaching |
 		<a href="/privacy-policy">Privacy policy</a>
 	</div>
 </footer>
