--- a/src/styles/sections/_s-content.sass
+++ b/src/styles/sections/_s-content.sass
@@ -28,8 +28,9 @@
     p,
     li
         color: $main-text-color
-        font-size: 20px
+        font-size: 18px
         line-height: 1.5
+        font-family: Arial, Helvetica, sans-serif
 
     a
         color: $main-text-color
