--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
 				<b>Contact</b>
 				<p class="u-mb">Kiann Kindercoaching<br>
 					Annelies Hofstee<br>
-					Waterviolier 1<br>
-					9613 BH Meerstad (bij Groningen)
+					
+					Meerstad (bij Groningen)
 				</p>
 				<p>
 					<a href="mailto:info@kiannkindercoaching.nl">info@kiannkindercoaching.nl</a><br>
